--- a/user/gitlab-shell/APKBUILD
+++ b/user/gitlab-shell/APKBUILD
@@ -1,19 +1,19 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=gitlab-shell
-pkgver=14.10.0
+pkgver=14.17.0
 pkgrel=0
 pkgdesc="GitLab Shell handles git SSH sessions for GitLab"
 url="https://gitlab.com/gitlab-org/gitlab-shell"
 arch="all"
 license="MIT"
 depends="git openssh"
-makedepends="go"
+makedepends="go krb5-dev"
 pkgusers="git"
 pkggroups="git"
 install="$pkgname.pre-install $pkgname.post-install"
 # NOTE: user vs system gitconfig, see https://gitlab.com/gitlab-org/omnibus-gitlab/-/merge_requests/6166
-source="https://gitlab.com/gitlab-org/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz
+source="https://gitlab.com/gitlab-org/gitlab-shell/-/archive/v$pkgver/gitlab-shell-v$pkgver.tar.gz
 	config.patch
 	change-config-path.patch
 	gitconfig
@@ -42,7 +42,6 @@ package() {
 
 	cd "$pkgdir"
 
-	rm "$libdir"/bin/check
 	rm "$libdir"/bin/gitlab-sshd
 
 	install -d -m755 -o git -g git \
@@ -59,8 +58,8 @@ package() {
 }
 
 sha512sums="
-4062d2f31d5bcbff653a44564aabff61dfcad4f0257c0ce5c131287864faaffcc37f86eb54d22b9e02b93f7149912c42f097f6b615b3dd479bdce3ba08af35da  gitlab-shell-v14.10.0.tar.gz
-22a6e87a317bbffa063717ca5f06f08e05da90c3ea18744049abfc29b3109a34d90d366b46b381cfbf3817e410daf8d0bc51a592b51a81b7f4a9381d20e347d8  config.patch
+2329f1172fe7f765cbf40a5155c08f19534b24d80d9c2ec379e08a363f949144a3bc49a35db872f3b33e1d6d675174245c66bfe24ca09bad1d96bd0f1ca35257  gitlab-shell-v14.17.0.tar.gz
+8cf13bf472e22b1c429bba5df98afb931c80b043ec83c8366d59f15a1e9b21daf09078f134e7aa622c87b32c774d1d5cf129878d5035102c06d0b12ead33f804  config.patch
 499b3a46ea94a33a23b01f6a7509d74f5a6781b930619b3b8ae42bdeae8a052cc636578744d7992b4ae4f9b9f72b11ee3d3c0f5e50986fa3f7e35b979b08aada  change-config-path.patch
 c53da7f145593693392d9fa880ad5a1909bfc7504fd1c93d94a468c3e0f5cc80f712f41ee1dc8bf38105b410c1165658f208bd88a70c4674104c78af33d8d09c  gitconfig
 "
